_build/default/lib/tip_parser/TipParser.automaton
State 0:
program' -> . program [ # ]
-- On IDENT shift to state 1
-- On tip_function shift to state 99
-- On program shift to state 101
-- On list(tip_function) shift to state 102
-- On EOF reduce production list(tip_function) -> 

State 1:
tip_function -> IDENT . LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR LBRACKET option(var_stat) statement ret_stat RBRACKET [ IDENT EOF ]
-- On LPAR shift to state 2

State 2:
tip_function -> IDENT LPAR . loption(separated_nonempty_list(COMMA,IDENT)) RPAR LBRACKET option(var_stat) statement ret_stat RBRACKET [ IDENT EOF ]
-- On IDENT shift to state 3
-- On separated_nonempty_list(COMMA,IDENT) shift to state 6
-- On loption(separated_nonempty_list(COMMA,IDENT)) shift to state 7
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> 

State 3:
separated_nonempty_list(COMMA,IDENT) -> IDENT . [ SEMI RPAR ]
separated_nonempty_list(COMMA,IDENT) -> IDENT . COMMA separated_nonempty_list(COMMA,IDENT) [ SEMI RPAR ]
-- On COMMA shift to state 4
-- On SEMI reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT 
-- On RPAR reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT 

State 4:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA . separated_nonempty_list(COMMA,IDENT) [ SEMI RPAR ]
-- On IDENT shift to state 3
-- On separated_nonempty_list(COMMA,IDENT) shift to state 5

State 5:
separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) . [ SEMI RPAR ]
-- On SEMI reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) 
-- On RPAR reduce production separated_nonempty_list(COMMA,IDENT) -> IDENT COMMA separated_nonempty_list(COMMA,IDENT) 

State 6:
loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) . [ SEMI RPAR ]
-- On SEMI reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) 
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> separated_nonempty_list(COMMA,IDENT) 

State 7:
tip_function -> IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) . RPAR LBRACKET option(var_stat) statement ret_stat RBRACKET [ IDENT EOF ]
-- On RPAR shift to state 8

State 8:
tip_function -> IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR . LBRACKET option(var_stat) statement ret_stat RBRACKET [ IDENT EOF ]
-- On LBRACKET shift to state 9

State 9:
tip_function -> IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR LBRACKET . option(var_stat) statement ret_stat RBRACKET [ IDENT EOF ]
-- On VAR shift to state 10
-- On var_stat shift to state 13
-- On option(var_stat) shift to state 14
-- On WHILE reduce production option(var_stat) -> 
-- On TIMES reduce production option(var_stat) -> 
-- On OUTPUT reduce production option(var_stat) -> 
-- On IF reduce production option(var_stat) -> 
-- On IDENT reduce production option(var_stat) -> 

State 10:
var_stat -> VAR . loption(separated_nonempty_list(COMMA,IDENT)) SEMI [ WHILE TIMES OUTPUT IF IDENT ]
-- On IDENT shift to state 3
-- On separated_nonempty_list(COMMA,IDENT) shift to state 6
-- On loption(separated_nonempty_list(COMMA,IDENT)) shift to state 11
-- On SEMI reduce production loption(separated_nonempty_list(COMMA,IDENT)) -> 

State 11:
var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) . SEMI [ WHILE TIMES OUTPUT IF IDENT ]
-- On SEMI shift to state 12

State 12:
var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI . [ WHILE TIMES OUTPUT IF IDENT ]
-- On WHILE reduce production var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI 
-- On TIMES reduce production var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI 
-- On OUTPUT reduce production var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI 
-- On IF reduce production var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI 
-- On IDENT reduce production var_stat -> VAR loption(separated_nonempty_list(COMMA,IDENT)) SEMI 

State 13:
option(var_stat) -> var_stat . [ WHILE TIMES OUTPUT IF IDENT ]
-- On WHILE reduce production option(var_stat) -> var_stat 
-- On TIMES reduce production option(var_stat) -> var_stat 
-- On OUTPUT reduce production option(var_stat) -> var_stat 
-- On IF reduce production option(var_stat) -> var_stat 
-- On IDENT reduce production option(var_stat) -> var_stat 

State 14:
tip_function -> IDENT LPAR loption(separated_nonempty_list(COMMA,IDENT)) RPAR LBRACKET option(var_stat) . statement ret_stat RBRACKET [ IDENT EOF ]
-- On WHILE shift to state 15
-- On TIMES shift to state 64
-- On OUTPUT shift to state 69
-- On IF shift to state 72
-- On IDENT shift to state 77
-- On statement shift to state 93
-- On single_statement shift to state 87

State 15:
single_statement -> WHILE . LPAR expr RPAR LBRACKET statement RBRACKET [ WHILE TIMES RET RBRACKET OUTPUT IF IDENT ]
-- On LPAR shift to state 16

State 16:
single_statement -> WHILE LPAR . expr RPAR LBRACKET statement RBRACKET [ WHILE TIMES RET RBRACKET OUTPUT IF IDENT ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 61

State 17:
expr -> TIMES . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 60

State 18:
expr -> NULL . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> NULL 
-- On SEMI reduce production expr -> NULL 
-- On RPAR reduce production expr -> NULL 
-- On RBRACKET reduce production expr -> NULL 
-- On PROJECT reduce production expr -> NULL 
-- On PLUS reduce production expr -> NULL 
-- On MINUS reduce production expr -> NULL 
-- On LPAR reduce production expr -> NULL 
-- On GREATER reduce production expr -> NULL 
-- On EQEQ reduce production expr -> NULL 
-- On DIV reduce production expr -> NULL 
-- On COMMA reduce production expr -> NULL 

State 19:
expr -> MINUS . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 59

State 20:
expr -> LPAR . expr RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 57

State 21:
expr -> LBRACKET . loption(separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr))) RBRACKET [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On IDENT shift to state 22
-- On separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) shift to state 54
-- On loption(separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr))) shift to state 55
-- On RBRACKET reduce production loption(separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr))) -> 

State 22:
separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) -> IDENT . COLON expr [ RBRACKET ]
separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) -> IDENT . COLON expr COMMA separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) [ RBRACKET ]
-- On COLON shift to state 23

State 23:
separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) -> IDENT COLON . expr [ RBRACKET ]
separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) -> IDENT COLON . expr COMMA separated_nonempty_list(COMMA,separated_pair(IDENT,COLON,expr)) [ RBRACKET ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 51

State 24:
expr -> INT . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> INT 
-- On SEMI reduce production expr -> INT 
-- On RPAR reduce production expr -> INT 
-- On RBRACKET reduce production expr -> INT 
-- On PROJECT reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LPAR reduce production expr -> INT 
-- On GREATER reduce production expr -> INT 
-- On EQEQ reduce production expr -> INT 
-- On DIV reduce production expr -> INT 
-- On COMMA reduce production expr -> INT 

State 25:
expr -> INPUT . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> INPUT 
-- On SEMI reduce production expr -> INPUT 
-- On RPAR reduce production expr -> INPUT 
-- On RBRACKET reduce production expr -> INPUT 
-- On PROJECT reduce production expr -> INPUT 
-- On PLUS reduce production expr -> INPUT 
-- On MINUS reduce production expr -> INPUT 
-- On LPAR reduce production expr -> INPUT 
-- On GREATER reduce production expr -> INPUT 
-- On EQEQ reduce production expr -> INPUT 
-- On DIV reduce production expr -> INPUT 
-- On COMMA reduce production expr -> INPUT 

State 26:
expr -> IDENT . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> IDENT 
-- On SEMI reduce production expr -> IDENT 
-- On RPAR reduce production expr -> IDENT 
-- On RBRACKET reduce production expr -> IDENT 
-- On PROJECT reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LPAR reduce production expr -> IDENT 
-- On GREATER reduce production expr -> IDENT 
-- On EQEQ reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On COMMA reduce production expr -> IDENT 

State 27:
expr -> AMPER . IDENT [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On IDENT shift to state 28

State 28:
expr -> AMPER IDENT . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> AMPER IDENT 
-- On SEMI reduce production expr -> AMPER IDENT 
-- On RPAR reduce production expr -> AMPER IDENT 
-- On RBRACKET reduce production expr -> AMPER IDENT 
-- On PROJECT reduce production expr -> AMPER IDENT 
-- On PLUS reduce production expr -> AMPER IDENT 
-- On MINUS reduce production expr -> AMPER IDENT 
-- On LPAR reduce production expr -> AMPER IDENT 
-- On GREATER reduce production expr -> AMPER IDENT 
-- On EQEQ reduce production expr -> AMPER IDENT 
-- On DIV reduce production expr -> AMPER IDENT 
-- On COMMA reduce production expr -> AMPER IDENT 

State 29:
expr -> ALLOC . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 30

State 30:
expr -> ALLOC expr . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PLUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . MINUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . TIMES expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . DIV expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . EQEQ expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . GREATER expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PROJECT [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On PROJECT shift to state 31
-- On LPAR shift to state 32
-- On TIMES reduce production expr -> ALLOC expr 
-- On SEMI reduce production expr -> ALLOC expr 
-- On RPAR reduce production expr -> ALLOC expr 
-- On RBRACKET reduce production expr -> ALLOC expr 
-- On PLUS reduce production expr -> ALLOC expr 
-- On MINUS reduce production expr -> ALLOC expr 
-- On GREATER reduce production expr -> ALLOC expr 
-- On EQEQ reduce production expr -> ALLOC expr 
-- On DIV reduce production expr -> ALLOC expr 
-- On COMMA reduce production expr -> ALLOC expr 

State 31:
expr -> expr PROJECT . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> expr PROJECT 
-- On SEMI reduce production expr -> expr PROJECT 
-- On RPAR reduce production expr -> expr PROJECT 
-- On RBRACKET reduce production expr -> expr PROJECT 
-- On PROJECT reduce production expr -> expr PROJECT 
-- On PLUS reduce production expr -> expr PROJECT 
-- On MINUS reduce production expr -> expr PROJECT 
-- On LPAR reduce production expr -> expr PROJECT 
-- On GREATER reduce production expr -> expr PROJECT 
-- On EQEQ reduce production expr -> expr PROJECT 
-- On DIV reduce production expr -> expr PROJECT 
-- On COMMA reduce production expr -> expr PROJECT 

State 32:
expr -> expr LPAR . loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On separated_nonempty_list(COMMA,expr) shift to state 33
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 34
-- On expr shift to state 36
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,expr)) -> 

State 33:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ RPAR ]
-- On RPAR reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) 

State 34:
expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) . RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On RPAR shift to state 35

State 35:
expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On SEMI reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On RPAR reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On RBRACKET reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On PROJECT reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On PLUS reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On MINUS reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On LPAR reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On GREATER reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On EQEQ reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On DIV reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 
-- On COMMA reduce production expr -> expr LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR 

State 36:
expr -> expr . PLUS expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . MINUS expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . TIMES expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . DIV expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . EQEQ expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . GREATER expr [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PROJECT [ TIMES RPAR PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
separated_nonempty_list(COMMA,expr) -> expr . [ RPAR ]
separated_nonempty_list(COMMA,expr) -> expr . COMMA separated_nonempty_list(COMMA,expr) [ RPAR ]
-- On TIMES shift to state 37
-- On PROJECT shift to state 31
-- On PLUS shift to state 39
-- On MINUS shift to state 43
-- On LPAR shift to state 32
-- On GREATER shift to state 45
-- On EQEQ shift to state 47
-- On DIV shift to state 41
-- On COMMA shift to state 49
-- On RPAR reduce production separated_nonempty_list(COMMA,expr) -> expr 

State 37:
expr -> expr TIMES . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 38

State 38:
expr -> expr . PLUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . MINUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . TIMES expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr TIMES expr . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . DIV expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . EQEQ expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . GREATER expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PROJECT [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On PROJECT shift to state 31
-- On LPAR shift to state 32
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SEMI reduce production expr -> expr TIMES expr 
-- On RPAR reduce production expr -> expr TIMES expr 
-- On RBRACKET reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On GREATER reduce production expr -> expr TIMES expr 
-- On EQEQ reduce production expr -> expr TIMES expr 
-- On DIV reduce production expr -> expr TIMES expr 
-- On COMMA reduce production expr -> expr TIMES expr 

State 39:
expr -> expr PLUS . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 40

State 40:
expr -> expr . PLUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr PLUS expr . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . MINUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . TIMES expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . DIV expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . EQEQ expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . GREATER expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PROJECT [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 37
-- On PROJECT shift to state 31
-- On LPAR shift to state 32
-- On DIV shift to state 41
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RPAR reduce production expr -> expr PLUS expr 
-- On RBRACKET reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On GREATER reduce production expr -> expr PLUS expr 
-- On EQEQ reduce production expr -> expr PLUS expr 
-- On COMMA reduce production expr -> expr PLUS expr 

State 41:
expr -> expr DIV . expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On TIMES shift to state 17
-- On NULL shift to state 18
-- On MINUS shift to state 19
-- On LPAR shift to state 20
-- On LBRACKET shift to state 21
-- On INT shift to state 24
-- On INPUT shift to state 25
-- On IDENT shift to state 26
-- On AMPER shift to state 27
-- On ALLOC shift to state 29
-- On expr shift to state 42

State 42:
expr -> expr . PLUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . MINUS expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . TIMES expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . DIV expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr DIV expr . [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . EQEQ expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . GREATER expr [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . LPAR loption(separated_nonempty_list(COMMA,expr)) RPAR [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
expr -> expr . PROJECT [ TIMES SEMI RPAR RBRACKET PROJECT PLUS MINUS LPAR GREATER EQEQ DIV COMMA ]
-- On PROJECT shift to state 31
-- On LPAR shift to state 32
-- On TIMES reduce production expr -> expr DIV expr 
-- On SEMI reduce production expr -> expr DIV expr 
-- On RPAR reduce production expr -> expr DIV expr 
-- On RBRACKET reduce production expr -> expr DIV expr 
-- On PLUS reduce production expr -> expr DIV expr 
-- On MINUS reduce production expr -> expr DIV expr 
-- On GREATER reduce production expr -> expr DIV expr 
-- On EQEQ reduce production expr -> expr DIV expr 
-- On DIV reduce production expr -> expr DIV expr 
-- On COMMA reduce production expr -> expr DIV expr 
